# luxswirl

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.test  LICENSE  Makefile  README.md  SECURITY.md  compose.agent.yaml  compose.dev.yaml.example  compose.prod.yaml  compose.test.yaml  compose.yaml
apps/agent/: Dockerfile  Dockerfile.lint  pyproject.toml
apps/agent/app/: agent_main.py
apps/agent/app/agent/: check_executor.py  check_manager.py  core.py  credentials.py  health.py  heartbeat.py  job_processor.py  lifecycle.py  registration.py  reporter.py  result_processor.py
apps/agent/app/checks/: _ssrf_http.py  base.py  dns.py  http.py  json.py  mysql.py  ping.py  postgres.py  synthetic.py  tcp.py
apps/agent/reports/: checks_cache.json
apps/agent/tests/: test_ssrf_run.py  test_validate_config.py
apps/backend/: Dockerfile  Dockerfile.lint  alembic.ini  package-lock.json  package.json  pyproject.toml  tailwind.config.js
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 000_initial_schema.py
apps/backend/app/: main.py
apps/backend/app/api/: __init__.py
apps/backend/app/api/v1/: __init__.py
apps/backend/app/background/: __init__.py  database_maintenance.py  job_purge.py  maintenance_worker.py  session_cleanup.py
apps/backend/app/background/maintenance_handlers/: __init__.py  agent_delete.py  bulk_check_create.py  bulk_check_delete.py  bulk_check_import.py  bulk_check_modify.py  bulk_check_toggle.py  status_page_delete.py
apps/backend/app/core/: __init__.py  auth_deps.py  check_target_validator.py  common_passwords.py  config.py  datetime_utils.py  default_settings.py  encrypted_types.py  exceptions.py  query_params.py  rate_limit.py  request_helpers.py  secrets.py  security.py  security_headers.py  synthetic_security.py
apps/backend/app/crud/: agent_crud.py  alert_crud.py  artifact_crud.py  check_crud.py  check_result_crud.py  job_crud.py  maintenance_job_crud.py  monitoring_crud.py  notification_log_crud.py  notification_provider_crud.py  registration_key_crud.py  scheduler_crud.py  session_crud.py  setting_crud.py  status_page_crud.py  timescale_crud.py  user_crud.py
apps/backend/app/db/: __init__.py  database.py  scheduler_init.py
apps/backend/app/db/defaults/: __init__.py  scheduler_templates.py
apps/backend/app/models/: __init__.py  agent_metric_model.py  agent_model.py  alert_check_mapping_model.py  alert_model.py  alert_notification_mapping_model.py  base.py  check_artifact_model.py  check_model.py  check_result_model.py  enum_model.py  job_model.py  maintenance_job_model.py  notification_log_model.py  notification_provider_model.py  registration_key_model.py  scheduler_model.py  session_model.py  setting_model.py  status_page_model.py  user_model.py
apps/backend/app/notifications/: __init__.py  registry.py
apps/backend/app/notifications/providers/: __init__.py  base.py  email.py  homeassistant.py  webhook.py
apps/backend/app/schemas/: __init__.py  agent_schema.py  alert_schema.py  auth_schema.py  base.py  check_artifact_schema.py  check_result_schema.py  check_schema.py  import_export_schema.py  job_schema.py  notification_provider_schema.py  pagination_schema.py  registration_key_schema.py  setting_schema.py  status_page_schema.py  user_schema.py
apps/backend/app/scripts/: cleanup_duplicate_internal_checks.py  create_test_status_page.py  migrate_encrypt_checks.py  name.py  ping_generator.py  ping_generator_esp.py  test_create_status_page.py  type_test.py
apps/backend/app/services/core/: _job_enrichers.py  agent_assignment_core_service.py  agent_core_service.py  alert_core_service.py  artifact_core_service.py  auth_core_service.py  check_core_service.py  check_result_core_service.py  cleanup_core_service.py  job_core_service.py  job_to_check_core_service.py  maintenance_job_core_service.py  metrics_collector_core_service.py  monitoring_core_service.py  network_discover_core_service.py  network_scan_core_service.py  notification_core_service.py  notification_log_core_service.py  registration_key_core_service.py  scheduler_core_service.py  settings_core_service.py  status_page_core_service.py  timescale_core_service.py  user_core_service.py
apps/backend/app/services/views/: __init__.py  _dashboard_render.py  agents_view_service.py  (+20 more)
apps/backend/app/web/: __init__.py  _hx_responses.py  dependencies.py  template_filters.py  templates_config.py
apps/backend/reports/: checks_cache.json
apps/backend/tests/: README.md  _paths.py  conftest.py  test_architecture.py  test_no_raw_js_network.py  test_no_redundant_db_commit.py  test_request_helpers.py  test_ssrf.py
apps/backend/tests/agents/: test_agent_assignment.py  test_agent_crud_integration.py  test_agent_service_integration.py
apps/backend/tests/alerts/: test_alert_crud_integration.py  test_alert_service_crud_integration.py  test_dedup_decision.py  test_dependency_suppression.py  test_ssl_recovery.py  test_state_key.py  test_state_key_properties.py
apps/backend/tests/api/: test_api_smoke.py
apps/backend/tests/auth/: test_auth_lifecycle_integration.py  test_auth_service_pure.py
apps/backend/tests/check_results/: test_check_result_crud_integration.py  test_check_result_service_integration.py
apps/backend/tests/checks/: test_check_crud_integration.py  test_check_service_bulk_integration.py  test_check_service_integration.py
apps/backend/tests/fixtures/: _assign_probe.py  committed_db.py  db.py  factories.py
apps/backend/tests/jobs/: test_cleanup_core_service.py  test_job_core_service.py  test_job_to_check_service.py  test_monitoring_core_service.py  test_scheduler_core_service.py  test_scheduler_decision_logic.py
apps/backend/tests/notifications/: conftest.py  test_notification_provider_integration.py  test_zz_debug.py
apps/backend/tests/registration_keys/: test_registration_key_service.py
apps/backend/tests/settings/: test_settings_service_integration.py
apps/backend/tests/status_pages/: test_status_page_service_integration.py
apps/backend/tests/users/: test_user_service_integration.py
(+235 files in other folders)
