[tool.poetry]
name = "luxswirl-agent"
version = "1.0.21"
description = "LuxSwirl observability platform — health-check agent"
authors = ["Luxardo Labs"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
# HTTP client (checks + reporting to server)
httpx = "^0.28.1"

# Credentials encryption (Fernet)
cryptography = "^48.0.0"

# Config / schema models
pydantic = "^2.5.3"

# Logging (shared/logger.py)
python-json-logger = "^2.0.7"

# Config files (shared/config.py)
pyyaml = "^6.0"

# Self-monitoring metrics
psutil = "^7.1.2"

# UUID v7 (time-ordered UUIDs)
uuid7 = "^0.1.0"

# Check-type drivers (imported lazily inside each check's run()):
playwright = "^1.48.0"      # synthetic checks
jsonata-python = "^0.6.0"   # JSON API checks (Uptime Kuma compatible)
aiomysql = "^0.3.2"         # MySQL checks
asyncpg = "^0.31.0"         # PostgreSQL checks
dnspython = "^2.7.0"        # DNS checks

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.3.0"
ruff = "^0.15.0"
mypy = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
# "." = apps/agent (resolves `import app.*`); ".." = apps/ (resolves `import shared.*`).
pythonpath = [".", ".."]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = ".:.."
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
# `shared` is a vendored top-level package (apps/shared, COPYd into each image),
# not a first-party app module — classify it explicitly so `make format` (which
# mounts app+tests) and `make lint` (fully baked) agree on its import group.
known-third-party = ["shared"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
